--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -66,7 +66,7 @@
     left: 12px;
 }
 
-.container2{
+.container2 {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -249,7 +249,7 @@
     height: 100%;
 }
 
-.product-container3-grid-text{
+.product-container3-grid-text {
     color: var(--color-1);
     width: calc(100% - 48px);
     padding: 24px;
@@ -263,42 +263,53 @@
     background-size: cover;
 }
 
-.product-container3-left-grid-details{
+.product-container3-left-grid-details {
     position: relative;
     width: 100%;
     position: relative;
-    text-align: right;
 }
 
-.product-container-left-grid-content{
+.product-container-left-grid-content {
     position: relative;
     display: flex;
     flex-direction: column;
-    top: calc(100% - 176px);
-    height: 176px;
+    padding-top: calc(100% - 272px);
+    height: 200px;
     gap: 24px;
-
-}
-
-.product-container3-left-grid-details span{
-    font-size: 18px;
     text-align: right;
+
+
 }
 
-.porduct-left-grid-title{
+.product-container-right-grid-content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: calc(100% - 272px);
+    height: 200px;
+    gap: 24px;
+    text-align: left;
+
+}
+
+
+.product-container3-grid-details span {
+    font-size: 18px;
+}
+
+.porduct-grid-title {
     position: relative;
     width: 100%;
-    text-align: right;
 }
 
-.porduct-left-grid-title span{
+.porduct-grid-title span {
     font-size: 36px;
     font-weight: 700;
 }
 
 .grid-left {
     clip-path: var(--clip-bottom-left);
-    
+
 }
 
 .grid-left::before {
@@ -325,7 +336,7 @@
     clip-path: var(--clip-top-right);
 }
 
-.grid-right-content{
+.grid-right-content {
     left: 0;
     bottom: 1px;
     top: 2px;
@@ -342,4 +353,3 @@
     bottom: 0;
     right: 0;
 }
-
