--- a/src/bars/topbar.css
+++ b/src/bars/topbar.css
@@ -2,20 +2,21 @@
     position: fixed;
     position: -webkit-sticky;
     width: 100%;
-    height: 80px;
+    height: 64px;
     top:0;
     z-index: 7;
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-direction: row;
-    background-color: transparent;
 }
 
 .top-bar-blur{
     backdrop-filter: blur(12px);
     background-color: rgba(255, 255, 255, 0.4);
 }
+
+
 
 .top-bar-logo{
     height: 24px;
@@ -39,8 +40,12 @@
 .navs-in-top-bar a{
     text-decoration: none;
     font-size: 18px;
-    color: var(--color-1);
     font-weight: 600;
     border-radius: 6px;
     padding: 6px;
+    color: var(--color-1);
+}
+
+.home-style a{
+    color: var(--color-2);
 }
