--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,7 +1,56 @@
-.map{
-    width: 500px;
-    height: 500px;
+.contact-page{
     display: flex;
-    background-color: blue;
+    flex-direction: row;
+    align-items: center;
+    height: 100vh;
+    padding: 0px 48px 0px 48px;
+    gap: 24px;
+    text-align: left;
+    justify-content: center;
+}
+.offices{
+    width: calc(50% - 60px);
+    height: 600px;
+    display: flex;
     overflow: hidden;
+    position: relative;
+    flex-direction: column;
+    z-index: 0;
+}
+
+.row-titles-contact{
+    font-weight: 500;
+    font-size: 36px;
+    padding: 12px;
+    color: var(--color-1);
+}
+
+.leaflet-container {
+    width: 100%;
+    height: 100vh;
+  }
+
+  .contact-info{
+    width: auto;
+    height: 600px;
+    display: flex;
+    flex-direction: column-reverse;
+  }
+.contact-content{
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    text-align: left;
+    padding: 12px;
+}
+
+.contact-content-title{
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--color-1);
+}
+.contact-content-content{
+    font-weight: 500;
+    font-size: 14px;
+    color: var(--color-1);
 }
