--- a/src/bars/sidemenu.css
+++ b/src/bars/sidemenu.css
@@ -1,7 +1,8 @@
 .side-menu{
     height: auto;
     width: 100%;
-    position: absolute;
+    position: fixed;
+    position: -webkit-sticky;
     top: 0;
     left: 0;
     z-index: 3;
