--- a/src/bars/carousel.css
+++ b/src/bars/carousel.css
@@ -1,178 +1,364 @@
-.carousel {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    top:0;
-    width: 100%;
-    height: 100vh ;
-    background-image: url(../assets/Backgrounds/caroulselbg.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    gap: 48px;
+@media only screen and (min-width: 1080px) {
+
+    .carousel-content {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        width: calc(50% - 146px);
+        height: 60%;
+        gap: 96px;
+        scroll-behavior: smooth;
+        padding-left: 25%;
+        padding-right: calc(25% + 146px);
+        scrollbar-width: none;
+        align-items: center;
+    }
+
+    .carousel {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background-image: url(../assets/Backgrounds/caroulselbg.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        gap: 48px;
+    }
+    
+    .carousel-item {
+        position: relative;
+        display: flex;
+        gap: 12px;
+        min-width: 800px;
+        height: 90%;
+    }
+    
+    .carousel-item-1 {
+        flex-direction: row;
+    }
+    
+    .carousel-item-2 {
+        flex-direction: column;
+    }
+    
+    .carousel-clip-right {
+        clip-path: var(--clip-bottom-right);
+    }
+    
+    
+    .carousel-clip-left {
+        clip-path: var(--clip-top-left);
+    }
+    
+    .carousel-btns {
+        position: relative;
+        left: 0;
+        gap: 12px;
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+    }
+    
+    .scroll-btn {
+        width: 20px;
+        height: 20px;
+        border: none;
+        background-color: var(--color-1);
+        clip-path: var(--clip-bottom-btn-right);
+    }
+    
+    .carousel-item-img {
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .carousel-item-1-img {
+        width: calc(70% - 12px);
+        height: 100%;
+    }
+    
+    .carousel-item-2-img {
+        width: 100%;
+        height: calc(70% - 12px);
+    }
+    
+    .carousel-item-img img {
+        height: 100%;
+        width: 100%;
+    }
+    
+    .carousel-item-text {
+        display: flex;
+        background-color: var(--color-2-transparent);
+    
+    }
+    
+    .carousel-item-1-text {
+        width: 30%;
+        height: calc(100% - 3px);
+        border-bottom: 3px solid var(--color-1);
+    }
+    
+    .cit1 {
+        border-bottom: 3px solid var(--color-1);
+    }
+    
+    .cit2 {
+        border-right: 3px solid var(--color-1);
+    }
+    
+    .cit3 {
+        border-top: 3px solid var(--color-1);
+    }
+    
+    .cit4 {
+        border-left: 3px solid var(--color-1);
+    }
+    
+    .carousel-item-2-text {
+        height: 30%;
+        width: calc(100% - 3px);
+    }
+    
+    .carousel-item-text-content {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 24px;
+        gap: 12px;
+    }
+    
+    .carousel-item-1-content {
+        height: 200px;
+        flex-direction: column;
+        top: calc(100% - 248px);
+        text-align: left;
+        width: calc(100% - 48px);
+    }
+    
+    .carousel-item-2-content {
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-between;
+        width: calc(100% - 48px);
+    }
+    
+    .cit3c {
+        top: 0;
+    }
+    
+    .carousel-item-title {
+        width: 100%;
+        height: 50%;
+    }
+    
+    .carousel-item-title-2 {
+        text-align: right;
+    }
+    
+    .carousel-item-title span {
+        text-wrap: wrap;
+        height: 100px;
+        font-size: 24px;
+        text-align: left;
+        font-weight: 700;
+        color: var(--color-1);
+    }
+    
+    
+    .carousel-item-detail {
+        width: 100%;
+        height: 50%;
+    }
+    
+    .carousel-item-detail span {
+        font-size: 16px;
+    }
+    
 }
 
-.carousel-item {
-    position: relative;
-    min-width: 800px;
-    height: 90%;
-    display: flex;
-    gap: 12px;
-}
 
-.carousel-item-1 {
-    flex-direction: row;
-}
+@media only screen and (max-width: 1080px) {
 
-.carousel-item-2 {
-    flex-direction: column;
-}
+    .carousel-content {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        width: 100%;
+        height: 60%;
+        gap: 96px;
+        scroll-behavior: smooth;
+        scrollbar-width: none;
+        align-items: center;
+    }
 
-.carousel-clip-right {
-    clip-path: var(--clip-bottom-right);
-}
+    .carousel {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        top: 0;
+        width: 100%;
+        height: 100vh;
+        background-image: url(../assets/Backgrounds/caroulselbg.jpg);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        gap: 48px;
+    }
+    
+    .carousel-item {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        min-width: 300px;
+        height: 100%;
+        clip-path: var(--clip-bottom-btn-right);
+    }
+    
+    .carousel-item-1 {
+        flex-direction: column;
+    }
+    
+    .carousel-item-2 {
+        flex-direction: column-reverse;
+    }
 
+    .reverse{
+        flex-direction: column-reverse;
+    }
+    
+    .carousel-clip-right {
+        clip-path: var(--clip-bottom-right);
+    }
+    
+    
+    .carousel-clip-left {
+        clip-path: var(--clip-top-left);
+    }
+    
+    .carousel-btns {
+        position: relative;
+        gap: 12px;
+        display: flex;
+        justify-content: center;
+        width: fit-content;
+    }
+    
+    .scroll-btn {
+        width: 20px;
+        height: 20px;
+        border: none;
+        background-color: var(--color-1);
+        clip-path: var(--clip-bottom-btn-right);
+    }
+    
+    .carousel-item-img {
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50%;
+    }
+    
+    .carousel-item-1-img {
+        width: 100%;
+        height: 50%;
+    }
+    
+    .carousel-item-2-img {
+        width: 100%;
+        height:50%;
+    }
+    
+    .carousel-item-img img {
+        height: 100%;
+        width: 100%;
+    }
+    
+    .carousel-item-text {
+        height: 50%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--color-2-transparent);
+    
+    }
+    
+    .carousel-item-1-text {
+        height: 50%;
+        width: 100%;
+    }
+    
 
-.carousel-clip-left {
-    clip-path: var(--clip-top-left);
-}
-
-
-.carousel-content {
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    width: calc(50% - 146px);
-    height: 60%;
-    gap: 96px;
-    scroll-behavior: smooth;
-    padding-left: 25%;
-    padding-right: calc(25% +  146px);
-    scrollbar-width: none;
-}
-
-.carousel-btns {
-    position: relative;
-    left: 25%;
-    gap: 12px;
-    display: flex;
-    justify-content: center;
-    width: fit-content;
-}
-
-.scroll-btn {
-    width: 20px;
-    height: 20px;
-    border: none;
-    background-color: var(--color-1);
-    clip-path: var(--clip-bottom-btn-right);
-}
-
-.carousel-item-img {
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.carousel-item-1-img {
-    width: calc(70% - 12px);
-    height: 100%;
-}
-
-.carousel-item-2-img {
-    width: 100%;
-    height: calc(70% - 12px);
-}
-
-.carousel-item-img img {
-    height: 100%;
-    width: 100%;
-}
-
-.carousel-item-text {
-    display: flex;
-    background-color: var(--color-2-transparent);
-
-}
-
-.carousel-item-1-text {
-    width: 30%;
-    height: calc(100% - 3px);
-    border-bottom: 3px solid var(--color-1);
-}
-
-.cit1{
-    border-bottom: 3px solid var(--color-1); 
-}
-
-.cit2{
-    border-right: 3px solid var(--color-1);
-}
-.cit3{
-    border-top: 3px solid var(--color-1); 
-}
-.cit4{
-    border-left: 3px solid var(--color-1); 
-}
-
-.carousel-item-2-text {
-    height: 30%;
-    width: calc(100% - 3px);
-}
-
-.carousel-item-text-content {
-    position: relative;
-    display: flex;
-    align-items: center;
-    padding: 24px;
-    gap: 12px;
-}
-
-.carousel-item-1-content {
-    height: 200px;
-    flex-direction: column;
-    top: calc(100% - 248px);
-    text-align: left;
-    width: calc(100% - 48px);
-}
-
-.carousel-item-2-content {
-    flex-direction: row;
-    text-align: left;
-    justify-content: space-between;
-    width: calc(100% - 48px);
-}
-
-.cit3c{
-    top: 0;
-}
-
-.carousel-item-title {
-    width: 100%;
-    height: 50%;
-}
-
-.carousel-item-title-2 {
-    text-align: right;
-}
-
-.carousel-item-title span {
-    text-wrap: wrap;
-    height: 100px;
-    font-size: 24px;
-    text-align: left;
-    font-weight: 700;
-    color: var(--color-1);
-}
-
-
-.carousel-item-detail {
-    width: 100%;
-    height: 50%;
-}
-
-.carousel-item-detail span {
-    font-size: 16px;
+    
+    .carousel-item-2-text {
+        height: 50%;
+        width: 100%;
+    }
+    
+    .carousel-item-text-content {
+        position: relative;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        padding: 24px;
+        gap: 12px;
+        flex-direction: column-reverse;
+    }
+    
+    .carousel-item-1-content {
+        flex-direction: column;
+        text-align: left;
+        width: calc(100% - 48px);
+    }
+    
+    .carousel-item-2-content {
+        flex-direction: column;
+        text-align: left;
+        justify-content: space-between;
+        width: calc(100% - 48px);
+    }
+    
+    .cit3c {
+        top: 0;
+    }
+    
+    .carousel-item-title {
+        width: 100%;
+        height: 50%;
+        text-align: center;
+    }
+    
+    .carousel-item-title-2 {
+        text-align: center;
+    }
+    
+    .carousel-item-title span {
+        text-wrap: wrap;
+        font-size: 24px;
+        text-align: left;
+        font-weight: 700;
+        color: var(--color-1);
+    }
+    
+    
+    .carousel-item-detail {
+        width: 100%;
+        height: 50%;
+        text-align: center;
+    }
+    
+    .carousel-item-detail span {
+        font-size: 16px;
+    }
 }
