--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -1,16 +1,15 @@
-.contact-page{
+.contact-page {
     display: flex;
-    flex-direction: row;
     align-items: center;
     height: 100vh;
     padding: 0px 48px 0px 48px;
     gap: 24px;
     text-align: left;
+    align-items: center;
     justify-content: center;
 }
-.offices{
-    width: calc(50% - 60px);
-    height: 600px;
+
+.offices {
     display: flex;
     overflow: hidden;
     position: relative;
@@ -18,7 +17,7 @@
     z-index: 0;
 }
 
-.row-titles-contact{
+.row-titles-contact {
     font-weight: 500;
     font-size: 36px;
     padding: 12px;
@@ -28,15 +27,14 @@
 .leaflet-container {
     width: 100%;
     height: 100vh;
-  }
+}
 
-  .contact-info{
+.contact-info {
     width: auto;
-    height: 600px;
     display: flex;
-    flex-direction: column-reverse;
-  }
-.contact-content{
+}
+
+.contact-content {
     display: flex;
     flex-direction: column;
     gap: 6px;
@@ -44,13 +42,52 @@
     padding: 12px;
 }
 
-.contact-content-title{
+.contact-content-title {
     font-weight: 600;
     font-size: 16px;
     color: var(--color-1);
 }
-.contact-content-content{
+
+.contact-content-content {
     font-weight: 500;
     font-size: 14px;
     color: var(--color-1);
+}
+
+@media only screen and (min-width: 1080px) {
+    .contact-page {
+        flex-direction: row;
+
+    }
+    .offices {
+        width: calc(50% - 60px);
+        height: 660px;
+
+    }
+    .contact-info {
+        height: 600px;
+        flex-direction: column-reverse;
+    }
+
+}
+
+@media only screen and (max-width: 1080px) {
+
+    .contact-page {
+        flex-direction: column;
+
+    }
+
+    .offices {
+        width: 100%;
+        height: 50%;
+        margin-top: 120px;
+
+    }
+
+    .contact-info {
+        height: 50%;
+        width: 100%;
+        flex-direction: column-reverse;
+    }
 }
