--- a/src/pages/aboutus.css
+++ b/src/pages/aboutus.css
@@ -1,5 +1,5 @@
 .about-us-page {
-    height: calc(100vh - 128px);
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -36,7 +36,7 @@
 }
 
 .about-us-logo {
-    height:35px;
+    height: 35px;
     width: 200px;
     margin-top: 24px;
 }
@@ -71,8 +71,8 @@
 
 
     .about-us-content {
-        width: 70%;
-        top: 192px;
+        width: calc(90% - 48px);
+        top: 96px;
     }
 
     .about-us-text {
@@ -83,15 +83,13 @@
 
 @media only screen and (min-width: 1080px) {
     .about-us-links {
-
         flex-direction: row;
-
     }
 
 
     .about-us-content {
         width: 70%;
-        top: 10%;
+        top: 0;
     }
 
     .about-us-text {
