--- a/src/pages/products.css
+++ b/src/pages/products.css
@@ -7,7 +7,7 @@
         flex-direction: column;
         gap: 182px;
     }
-    
+
     .product-info {
         background-color: black;
         position: relative;
@@ -17,12 +17,12 @@
         clip-path: var(--clip-bottom-right);
         background-color: var(--color-1);
     }
-    
+
     .product-img {
         height: 100%;
         width: 100%;
     }
-    
+
     .product-features {
         position: absolute;
         width: 100%;
@@ -34,7 +34,7 @@
         gap: 48px;
         background-color: transparent;
     }
-    
+
     .product-feature {
         display: flex;
         height: 100px;
@@ -46,7 +46,7 @@
         border-left: 1px solid white;
         border-spacing: 5px 1rem;
     }
-    
+
     .product-feature-content {
         height: 90%;
         width: 90%;
@@ -60,13 +60,13 @@
         padding-bottom: 24px;
         background-color: var(--color-1);
     }
-    
+
     .product-feature-content span {
         position: relative;
         top: 12px;
         left: 12px;
     }
-    
+
     .container2 {
         width: 100%;
         height: 100vh;
@@ -75,7 +75,7 @@
         justify-content: center;
         z-index: 1;
     }
-    
+
     .product-container2 {
         width: calc(80% - 182px);
         height: auto;
@@ -87,8 +87,8 @@
         gap: 24px;
         background-color: var(--color-2);
     }
-    
-    
+
+
     .product-container2::after {
         content: "";
         position: absolute;
@@ -99,7 +99,7 @@
         z-index: -1;
         background-color: var(--color-1);
     }
-    
+
     .product-container2::before {
         content: "";
         position: absolute;
@@ -110,8 +110,8 @@
         z-index: -1;
         background-color: var(--color-1);
     }
-    
-    
+
+
     .product-container2-media {
         position: relative;
         display: flex;
@@ -121,15 +121,15 @@
         margin-top: 48px;
         top: 0;
         background-color: var(--color-2);
-    
+
     }
-    
+
     .product-container2-media-content {
         width: 100%;
         height: 100%;
     }
-    
-    
+
+
     .product-container2-texts {
         width: 100%;
         height: 200px;
@@ -139,7 +139,7 @@
         align-items: center;
         background-color: var(--color-2);
     }
-    
+
     .product-container2-title {
         height: calc(100% - 48px);
         padding: 24px;
@@ -147,7 +147,7 @@
         justify-content: center;
         align-items: center;
     }
-    
+
     .product-container2-title::after {
         content: "";
         background-color: var(--color-1);
@@ -158,7 +158,7 @@
         height: 50px;
         z-index: 1;
     }
-    
+
     .product-container2-title::before {
         content: "";
         background-color: var(--color-1);
@@ -169,7 +169,7 @@
         height: 50px;
         z-index: -1;
     }
-    
+
     .product-container2-title span {
         font-size: 36px;
         position: relative;
@@ -178,83 +178,64 @@
         color: var(--color-1);
         font-weight: 600;
     }
-    
+
     .product-container2-text {
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    
+
     .product-container2-text span {
         font-size: 24px;
     }
-    
+
     /* container 3 */
-    
+
     .product-container3 {
         position: relative;
-        height: 100vh;
+        height: auto;
         width: 100%;
         display: flex;
-        gap: 96px;
-        flex-direction: row;
+        gap: 24px;
+        flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
     }
-    
-    .grid-one-container3 {
-        position: relative;
-        width: 25%;
-        height: 90%;
-    }
-    
-    .grid-one-container3::before {
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 200px;
-        z-index: -1;
-        background-color: var(--color-1);
-    
-    }
-    
-    
-    .grid-one-container3::after {
-        content: "";
-        position: absolute;
-        width: 50px;
-        height: 50px;
-        z-index: -1;
-        background-color: var(--color-1);
-    }
-    
-    
+
     .porduct-container3-grid {
-        position: relative;
+        height: 500px;
+        width: 70%;
+        display: flex;
         background-color: var(--color-2);
-        width: calc(100% - 2px);
-        height: calc(100% - 4px);
     }
-    
-    
+
+    .grid-left {
+        text-align: left;
+        flex-direction: row;
+    }
+
+    .grid-right {
+        text-align: right;
+        flex-direction: row-reverse;
+    }
+
     .product-container3-grid-media {
-        width: 100%;
-        height: 60%;
-        background-color: #000000;
+        width: 40%;
+        height: 100%;
     }
-    
+
     .product-container3-grid-media-content {
         position: relative;
         width: 100%;
         height: 100%;
     }
-    
+
     .product-container3-grid-text {
         color: var(--color-1);
-        width: calc(100% - 48px);
+        width: calc(60% - 48px);
         padding: 24px;
-        height: calc(40% - 48px);
+        height: calc(100% - 48px);
         display: flex;
         flex-direction: column;
         gap: 48px;
@@ -263,97 +244,21 @@
         background-position: center;
         background-size: cover;
     }
-    
-    .product-container3-left-grid-details {
-        position: relative;
-        width: 100%;
-        position: relative;
-    }
-    
-    .product-container-left-grid-content {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding-top: calc(100% - 272px);
-        height: 200px;
-        gap: 24px;
-        text-align: right;
-    
-    
-    }
-    
-    .product-container-right-grid-content {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        padding-bottom: calc(100% - 272px);
-        height: 200px;
-        gap: 24px;
-        text-align: left;
-    
-    }
-    
-    
+
     .product-container3-grid-details span {
         font-size: 18px;
     }
-    
+
     .porduct-grid-title {
         position: relative;
         width: 100%;
     }
-    
+
     .porduct-grid-title span {
         font-size: 36px;
         font-weight: 700;
     }
-    
-    .grid-left {
-        clip-path: var(--clip-bottom-left);
-    
-    }
-    
-    .grid-left::before {
-        clip-path: var(--clip-bottom-left);
-        bottom: 0;
-        left: 0;
-    }
-    
-    .grid-left::after {
-        top: -2px;
-        left: 0;
-    }
-    
-    .grid-left-content {
-        left: 2px;
-        bottom: 1px;
-        top: 2px;
-        clip-path: var(--clip-bottom-left);
-    }
-    
-    /*grid right*/
-    
-    .grid-right {
-        clip-path: var(--clip-top-right);
-    }
-    
-    .grid-right-content {
-        left: 0;
-        bottom: 1px;
-        top: 2px;
-        clip-path: var(--clip-top-right);
-    }
-    
-    .grid-right::before {
-        clip-path: var(--clip-top-right);
-        top: 0;
-        right: 0;
-    }
-    
-    .grid-right::after {
-        bottom: 0;
-        right: 0;
-    }
+
 }
 
 @media screen and (max-width: 1080px) {
@@ -364,7 +269,7 @@
         align-items: center;
         flex-direction: column;
     }
-    
+
     .product-info {
         position: relative;
         display: flex;
@@ -372,12 +277,12 @@
         width: 100%;
         background-color: var(--color-2);
     }
-    
+
     .product-img {
         height: 100%;
         width: 100%;
     }
-    
+
     .product-features {
         position: absolute;
         width: 100%;
@@ -390,7 +295,7 @@
         gap: 48px;
         background-color: transparent;
     }
-    
+
     .product-feature {
         display: flex;
         height: 100px;
@@ -402,7 +307,7 @@
         border-left: 1px solid white;
         border-spacing: 5px 1rem;
     }
-    
+
     .product-feature-content {
         height: 90%;
         width: 90%;
@@ -416,13 +321,13 @@
         padding-bottom: 24px;
         background-color: var(--color-1);
     }
-    
+
     .product-feature-content span {
         position: relative;
         top: 12px;
         left: 12px;
     }
-    
+
     .container2 {
         width: 100%;
         height: 100vh;
@@ -431,7 +336,7 @@
         justify-content: center;
         z-index: 1;
     }
-    
+
     .product-container2 {
         width: 80%;
         height: auto;
@@ -443,8 +348,8 @@
         gap: 12px;
         background-color: var(--color-2);
     }
-    
-    
+
+
     .product-container2::after {
         content: "";
         position: absolute;
@@ -455,19 +360,8 @@
         z-index: -1;
         background-color: var(--color-1);
     }
-    
-    .product-container2::before {
-        content: "";
-        position: absolute;
-        bottom: -3px;
-        right: -3px;
-        width: 50px;
-        height: 50px;
-        z-index: -1;
-        background-color: var(--color-1);
-    }
-    
-    
+
+
     .product-container2-media {
         position: relative;
         display: flex;
@@ -476,15 +370,15 @@
         width: 100%;
         top: 0;
         background-color: var(--color-2);
-    
+
     }
-    
+
     .product-container2-media-content {
         width: 100%;
         height: 100%;
     }
-    
-    
+
+
     .product-container2-texts {
         width: 100%;
         height: 200px;
@@ -495,7 +389,7 @@
         align-items: center;
         background-color: var(--color-2);
     }
-    
+
     .product-container2-title {
         height: calc(100% - 48px);
         padding: 12px;
@@ -503,7 +397,7 @@
         justify-content: center;
         align-items: center;
     }
-    
+
     .product-container2-title::after {
         content: "";
         background-color: var(--color-1);
@@ -514,7 +408,7 @@
         height: 100px;
         z-index: 1;
     }
-    
+
     .product-container2-title::before {
         content: "";
         background-color: var(--color-1);
@@ -525,7 +419,7 @@
         height: 50px;
         z-index: -1;
     }
-    
+
     .product-container2-title span {
         font-size: 24px;
         position: relative;
@@ -534,117 +428,84 @@
         color: var(--color-1);
         font-weight: 600;
     }
-    
+
     .product-container2-text {
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    
+
     .product-container2-text span {
         font-size: 16px;
     }
-    
-    /* container 3 */
-    
+
     .product-container3 {
         position: relative;
-        height: 100vh;
-        padding-bottom: 100px;
+        height: auto;
         width: 100%;
-        gap: 24px;
         display: flex;
-        flex-direction: column;
+        gap: 24px;
+        flex-direction: column-reverse;
         align-items: center;
         justify-content: center;
     }
-    
-    .grid-one-container3 {
-        position: relative;
-        width: 100%;
-        height: 50%;
-    }
-    
-    
-    
+
     .porduct-container3-grid {
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        background-color: var(--color-2);
+        height: 300px;
         width: 100%;
-        height: 100%;
+        display: flex;
+        background-color: var(--color-2);
     }
-    
-    
+
+    .grid-left {
+        text-align: left;
+        flex-direction: row;
+    }
+
+    .grid-right {
+        text-align: right;
+        flex-direction: row-reverse;
+    }
+
     .product-container3-grid-media {
-        width: 50%;
+        width: 40%;
         height: 100%;
-        clip-path: var(--clip-top-left);
-        background-color: #000000;
     }
-    
+
     .product-container3-grid-media-content {
         position: relative;
         width: 100%;
         height: 100%;
     }
-    
+
     .product-container3-grid-text {
         color: var(--color-1);
-        width: calc(50% - 48px);
+        width: calc(60% - 48px);
         padding: 24px;
         height: calc(100% - 48px);
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
+        gap: 48px;
         background-image: url(../assets/Backgrounds/dots.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: cover;
     }
-    
-    .product-container3-left-grid-details {
-        position: relative;
-        width: 100%;
-    }
-    
-    .product-container-left-grid-content {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        gap: 24px;
-        text-align: right;
-    
-    
-    }
-    
-    .product-container-right-grid-content {
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        gap: 24px;
-        text-align: left;
-    
-    }
-    
-    
+
     .product-container3-grid-details span {
         font-size: 18px;
     }
-    
+
     .porduct-grid-title {
         position: relative;
         width: 100%;
     }
-    
+
     .porduct-grid-title span {
         font-size: 36px;
         font-weight: 700;
     }
-    
+
+
 }
