--- a/src/admin/dealershiprequests.css
+++ b/src/admin/dealershiprequests.css
@@ -7,6 +7,7 @@
     gap: 24px;
     justify-content: center;
     flex-direction: row;
+    overflow: auto;
 }
 
 .requests-grid{
@@ -30,20 +31,37 @@
 .request-card-name, .view-status{
     text-decoration: none;
     font-size: 18px;
+    text-wrap: wrap;
+    max-width: 100%;
+    min-height: 50px;
     font-weight: 500;
 }
 
 .request-card{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: rgb(0, 0, 0,0.2);
     min-width: 300px;
-    height: 50px;
+    height: fit-content;
     border-radius: 12px;
     display: flex;
-    align-items: center;
+    align-items: start;
+    text-wrap: wrap;
     padding: 12px 36px 12px 36px;
-    justify-content: space-between;
+}
+.view-status{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    gap: 12px;
 }
 
+.view-status button{
+    border: none;
+    background-color: var(--color-1);
+    padding: 6px;
+    border-radius: 6px;
+    color: var(--color-2);
+}
 
