--- a/src/admin/dealershiprequests.css
+++ b/src/admin/dealershiprequests.css
@@ -4,6 +4,7 @@
     color: var(--color-1);
     display: flex;
     padding: 64px;
+    padding-left: 224px;
     gap: 24px;
     justify-content: center;
     flex-direction: row;
