--- a/src/admin/adminsidebar.css
+++ b/src/admin/adminsidebar.css
@@ -1,13 +1,15 @@
 .adminsidebar{
-    height: 64px;
-    width: 100%;
+    height: 100%;
+    width: 200px;
     display: flex;
     position: fixed;
     position: -webkit-sticky;
     top: 0;
+    left: 0;
     justify-content: center;
-    gap: 12px;
-    flex-direction: row;
+    gap: 24px;
+    flex-direction: column;
+    text-align: left;
     background-color: var(--color-1);
 }
 
@@ -15,8 +17,9 @@
     color: var(--color-2);
     text-decoration: none;
     font-weight: 700;
-    font-size: 16px;
+    font-size: 18px;
     display: flex;
-    align-items: center;
+    text-align: left;
+    width: 100%;
     justify-content: center;
 }
