--- a/src/admin/productson.css
+++ b/src/admin/productson.css
@@ -13,7 +13,7 @@
    background-color: rgb(0, 0, 0,0.2);
    flex-direction: row;
    height: 100px;
-   min-width: 300px;
+   max-width: 500px;
    align-items: center;
    padding: 12px 36px 12px 36px;
    font-size: 16px;
@@ -42,6 +42,7 @@
     padding: 6px;
     border-radius: 6px;
     text-decoration: none;
+    font-weight: 600;
     color: var(--color-1);
     background-color: var(--color-2);
 }
