--- a/src/bars/carousel.css
+++ b/src/bars/carousel.css
@@ -76,21 +76,34 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        object-fit: cover;
+        width: 100%;
+        height: 60%;
+        top: 0;
+        left: 0;
     }
     
     .carousel-item-1-img {
         width: calc(70% - 12px);
         height: 100%;
+        object-fit: cover;
+        height: 100%;
+        top: 0;
+        left: 0;
     }
     
     .carousel-item-2-img {
         width: 100%;
-        height: calc(70% - 12px);
+        height: calc(50% - 12px);  object-fit: cover;
+        width: 100%;
+        top: 0;
+        left: 0;
     }
     
     .carousel-item-img img {
         height: 100%;
         width: 100%;
+        object-fit: cover;
     }
     
     .carousel-item-text {
@@ -122,7 +135,7 @@
     }
     
     .carousel-item-2-text {
-        height: 30%;
+        height: 40%;
         width: calc(100% - 3px);
     }
     
@@ -132,12 +145,14 @@
         align-items: center;
         padding: 24px;
         gap: 12px;
+        background-color: aquamarine;
+        justify-content: center;
     }
     
     .carousel-item-1-content {
-        height: 200px;
+        height: calc(100% - 101px);
         flex-direction: column;
-        top: calc(100% - 248px);
+        top: 50px;
         text-align: left;
         width: calc(100% - 48px);
     }
@@ -146,6 +161,7 @@
         flex-direction: row;
         text-align: left;
         justify-content: space-between;
+        align-items: center;
         width: calc(100% - 48px);
     }
     
@@ -154,8 +170,8 @@
     }
     
     .carousel-item-title {
-        width: 100%;
-        height: 50%;
+        width: auto;
+        height: auto;
     }
     
     .carousel-item-title-2 {
@@ -191,7 +207,7 @@
         flex-direction: row;
         overflow-x: scroll;
         width: calc(100%  - 192px);
-        height: 60%;
+        height: 70%;
         gap: 96px;
         scroll-behavior: smooth;
         scrollbar-width: none;
