--- a/src/pages/aboutus.css
+++ b/src/pages/aboutus.css
@@ -59,7 +59,7 @@
     position: absolute;
     background-size: cover;
     background-position: center;
-    background-image: url(../assets/Duotera/Duotera\ Tesla13678.jpg);
+    background-image: url(../assets/Backgrounds/caroulselbg.jpg);
 }
 
 @media only screen and (max-width: 1080px) {
