--- a/src/pages/contact.css
+++ b/src/pages/contact.css
@@ -17,6 +17,14 @@
     z-index: 0;
 }
 
+.offices img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
 .row-titles-contact {
     font-weight: 500;
     font-size: 36px;
