--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -17,7 +17,7 @@
 
 .loading{
   position: relative;
-  height: 50px;
+  padding: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -42,7 +42,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  transition: all 5s ease-in-out;
 }
 
 .home-content-title {
