--- a/src/bars/topbar.css
+++ b/src/bars/topbar.css
@@ -67,10 +67,11 @@
     }
     .menu-btn{
         background-color: transparent;
+        width: 48px;
+        height: auto;
         border: none;
         position: absolute;
         right: 0;
-        padding-right: 12px;
     }
  
     .top-bar{
