--- a/src/bars/topbar.css
+++ b/src/bars/topbar.css
@@ -72,7 +72,7 @@
         height: auto;
         border: none;
         position: absolute;
-        right: 0;
+        right: 12px;
     }
  
     .top-bar{
