--- a/src/bars/topbar.css
+++ b/src/bars/topbar.css
@@ -1,8 +1,8 @@
 .top-bar{
     position: fixed;
     position: -webkit-sticky;
-    width: 100%;
-    height: 84px;
+    width: 100vw;
+    height: 64px;
     top:0;
     z-index: 3;
     display: flex;
@@ -33,9 +33,6 @@
         left: 48px;
     
     }
-    .home-style a{
-        color: var(--color-2);
-    }
     .navs-in-top-bar{
         position: relative;
         margin-right: 48px;
@@ -50,6 +47,10 @@
         padding: 6px;
         color: var(--color-1);
     }
+    .home-style a{
+        color: var(--color-2);
+    }
+   
 }
 
 
