--- a/src/bars/topbar.css
+++ b/src/bars/topbar.css
@@ -1,9 +1,12 @@
 .top-bar{
     position: fixed;
     position: -webkit-sticky;
-    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
     height: 64px;
     top:0;
+    left: 0;
+    right: 0;
     z-index: 3;
     display: flex;
     align-items: center;
