--- a/src/bars/footer.css
+++ b/src/bars/footer.css
@@ -19,6 +19,7 @@
 @media only screen and (min-width: 1080px) {
     .footer{
         position: relative;
+        bottom: 0;
         background-color: var(--color-1);
         height: 48px;
         width: 100vw;
