--- a/src/bars/sidemenu.css
+++ b/src/bars/sidemenu.css
@@ -18,6 +18,7 @@
         position: -webkit-sticky;
         top: 0;
         left: 0;
+        gap: 6px;
         z-index: 3;
         padding-top: 88px;
         padding-bottom: 24px;
@@ -35,5 +36,8 @@
         font-size: 16px;
         font-weight: 700;
         padding-top: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
