--- a/src/pages/aboutus.css
+++ b/src/pages/aboutus.css
@@ -1,10 +1,10 @@
 .about-us-page {
-    height: 100vh;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 64px;
+    padding-top: 96px;
     padding-bottom: 64px;
     background-color: var(--color-2);
     overflow: auto;
@@ -53,7 +53,7 @@
 
 .about-us-barner {
     width: 100%;
-    height: 60%;
+    height: 60vh;
     z-index: 0;
     top: 0;
     position: absolute;
