--- a/src/pages/aboutus.css
+++ b/src/pages/aboutus.css
@@ -1,5 +1,5 @@
 .about-us-page {
-    height: fit-content;
+    min-height:100vh ;
     display: flex;
     flex-direction: column;
     align-items: center;
