--- a/src/bars/footer.css
+++ b/src/bars/footer.css
@@ -15,6 +15,10 @@
     font-size: 18px;
     font-weight: 500;opacity: 0.6;
 }
+.social-ico{
+    height: 32px;
+    width: 32px;
+}
 
 @media only screen and (min-width: 1080px) {
     .footer{
